feat: Add feature showcase on landing page and explain practice vs quiz differences

--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   },
   "lint-staged": {
     "*.{ts,tsx}": [
-      "eslint --fix --max-warnings=0",
+      "eslint --fix",
       "bash -c 'tsc --noEmit --skipLibCheck'"
     ],
     "*.{js,jsx}": [
-      "eslint --fix --max-warnings=0"
+      "eslint --fix"
     ]
   },
   "dependencies": {
