fix: Improve filler word detection and adjust pause counting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "typescript",
     "typescriptreact"
   ],
-  "eslint.format.enable": true
+  "eslint.format.enable": true,
+  "editor.formatOnSave": true
 }
 
