--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     ]
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.63",
     "@aws-sdk/client-s3": "^3.922.0",
     "@prisma/client": "^6.18.0",
+    "ai": "^5.0.88",
     "framer-motion": "^12.23.24",
     "next": "16.0.1",
     "openai": "^6.8.0",
