--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  // ESLint - Auto-fix on save and show errors immediately
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
   },
@@ -9,6 +10,29 @@
     "typescriptreact"
   ],
   "eslint.format.enable": true,
-  "editor.formatOnSave": true
+  "eslint.lintTask.enable": true,
+  "eslint.run": "onType", // Show errors as you type
+  "eslint.probe": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact"
+  ],
+  
+  // Format on save
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  
+  // TypeScript - Show errors immediately
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "typescript.enablePromptUseWorkspaceTsdk": true,
+  "typescript.preferences.includePackageJsonAutoImports": "on",
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  
+  // Show problems (linting errors) in the editor
+  "problems.showCurrentInStatus": true,
+  
+  // Auto-save for faster feedback (optional - you can disable if you prefer manual save)
+  "files.autoSave": "onFocusChange"
 }
 
