--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
     "@ai-sdk/openai": "^2.0.63",
     "@aws-sdk/client-s3": "^3.922.0",
     "@prisma/client": "^6.18.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "ai": "^5.0.88",
+    "bcryptjs": "^3.0.3",
     "framer-motion": "^12.23.24",
+    "jsonwebtoken": "^9.0.2",
     "next": "16.0.1",
     "openai": "^6.8.0",
     "papaparse": "^5.5.3",
