Refactor Prisma build process and add initial database migrations
- Update build script in package.json to include database migrations
- Add migration lock file for version control
- Create initial migration for database schema including User, QuestionBank, Question, Session, and related tables
- Introduce new QuestionType enum and update Question table to include type column

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "DATABASE_URL=\"postgresql://user:pass@localhost:5432/dummy\" prisma generate && next build",
+    "build": "prisma generate && prisma migrate deploy && next build",
     "start": "next start",
     "lint": "eslint .",
     "typecheck": "tsc --noEmit",
